[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-spark-job"
dynamic = ["version"]
description = "A configurable PySpark job for Microsoft Fabric with different execution modes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bartosz Wichowski", email = "bartosz.wichowski@dxc.com"}
]
maintainers = [
    {name = "Bartosz Wichowski", email = "bartosz.wichowski@dxc.com"}
]
keywords = ["pyspark", "microsoft-fabric", "data-processing", "spark-jobs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.7"
dependencies = [
    "pyspark>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
fabric-spark-job = "spark_job:main"

[project.urls]
Homepage = "https://github.com/gabiup2/fabric-spark-job"
Documentation = "https://github.com/gabiup2/fabric-spark-job#readme"
Repository = "https://github.com/gabiup2/fabric-spark-job"
"Bug Tracker" = "https://github.com/gabiup2/fabric-spark-job/issues"

[tool.setuptools_scm]
write_to = "spark_job/_version.py"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=spark_job",
    "--cov-report=term-missing",
    "--cov-report=html",
]
